--- a/3_panel_banner.html
+++ b/3_panel_banner.html
@@ -16,9 +16,9 @@
   <main class="wrap">
     <picture>
       <!-- Optional: serve WebP first for speed -->
-      <source srcset="grocery-panorama.webp" type="image/webp">
+      <source srcset="crop2.webp" type="image/webp">
       <img
-        src="grocery-panorama.png"
+        src="crop2.png"
         alt="Panoramic collage of cheese, tomatoes/avocados, and bratwurst display, arranged left to right with angled blends." />
     </picture>
   </main>
